code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_8.wast
(assert_invalid
  (module
    (func $type-arg-empty-in-return
      (block (result i32)
        (return (br 0))
      )
      (i32.eqz) (drop)
    )
  )
  "type mismatch"
)